[package]
name = "search"
version = "23.6.0"
edition = "2021"
authors = ["Eric Kalosa-Kenyon <helloateric@gmail.com>"]
description = "A smart, voice-operated code search tool"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
clap = { version = "4.3.4", features = ["derive"] }
csv = "1.2.2"
futures = "0.3.28"
openai = "1.0.0-alpha.11"
tokio = "1.28.2"
